--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,5 +11,6 @@ actix-files = "0.6.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 queryst = "2.1.0"
+chrono = "0.4.23"
 
 [lib]
